action bot alignement issue fixed

--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -23,8 +23,8 @@
     }  
 }
 .botContainer{
-   padding: 30px 65px 0 70px;
-    height: calc(100vh - 62px);
+    padding: 30px 65px 0 70px;
+    height: calc(100vh - 63px);
     overflow: hidden;    
     background: #fff;
     .noTraits {
@@ -109,28 +109,9 @@
     .empty-case-showing-cotent{
         margin: 0 -5px;
     }
-    .kr-sg-data-table section.table-content .content-body{
-        cursor: pointer;
-    }
-    .kr-sg-data-table{
-        section{
-            .empty{
-                display: none;
-                text-align: center;
-                width: 100%;
-                padding: 10%;
-                white-space: break-spaces;
-            }
-            div.empty:first-child {
-                display: block !important;
-              }
-            .last-child {
-                max-width: 90px !important;
-            }
-        }
-    }
     .table-list-content{
         .kr-sg-data-table{
+            margin: 0 0 10px 0;
             .table-action-header{
                 justify-content: space-between;
                 height: auto;
@@ -631,6 +612,17 @@
     }
     .botContainer{
         font-family: 'Inter', sans-serif !important;
+        .table-scroll-perfect-bot{
+            height: calc(100vh - 153px);
+        }
+        .list-view-data{
+            .row_list{
+                margin: 0 !important;
+                .box-content{
+                    padding: 10px 0 0 10px;
+                }
+            }
+        }
         .bot-box{
             width: 313px;
             height: 120px;
@@ -699,28 +691,7 @@
                     }
                 }
 
-            }
-            
+            }            
         }
         
-    }
-    
-    .list-view-data .row_list .box-content .box {
-        width : 220px !important;
-        height : 170px !important;
-        background: #FFFFFF !important;
-        // background: #f8f9fa !important;
-        border: none;
-    }
-    .list-view-data .row_list .box-content :hover{
-        background: #e5e8ec !important;
-    }
-    .list-view-data .row_list .box-content .box :hover{
-        background : none  !important;
-    }
-    .bot-box:hover{
-        background : none  !important;
-        .actions-bot{
-            visibility: visible;
-        }
-    }
+    }    
